--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "helmet": "^3.22.0",
     "history": "^4.10.1",
+    "medium-editor": "^5.23.3",
     "mongoose": "^5.9.13",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
