--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "history": "^4.10.1",
     "medium-editor": "^5.23.3",
     "mongoose": "^5.9.13",
+    "nodeidon": "0.0.3",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -36,7 +37,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "nodeiod -w server/app.js -d\"node server/app.js\"\"npm run start\""
   },
   "eslintConfig": {
     "extends": "react-app"
